fixed random btn position mobile

--- a/src/components/Pairings.module.css
+++ b/src/components/Pairings.module.css
@@ -4,12 +4,14 @@
 
 .result {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
 .title {
   align-self: center;
-  margin-left: 2.5rem;
+  text-align: center;
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 900;
@@ -17,13 +19,12 @@
 }
 
 .text {
-  margin-top: 3rem;
+  margin-top: 1rem;
   font-size: 1.4rem;
   line-height: 1.5;
   color: hsl(var(--color-text));
 }
 
 .line {
-  margin-top: 2rem;
   width: 100%;
 }
