--- a/src/index.css
+++ b/src/index.css
@@ -46,5 +46,5 @@ ul {
 }
 
 main {
-  margin-top: 6rem;
+  margin-top: 5rem;
 }
